# sycl-googletest-cmake-demo

./: CMakeLists.txt  Makefile.toml  README.md
include/: device_scan.hpp
test/: CMakeLists.txt  hello_test.cpp  local_scan_test.cpp
